...
    // логика перехода в один из сценариев
    private func proceedToNextQuestionOrResults() {
        guard let viewController = viewController else { return }
        if self.isLastQuestion() {
            statisticService.store(correct: correctAnswers, total: self.questionsAmount)
            // идём в состояние "Результат квиза"
            let result = QuizResultsViewModel(title: "Этот раунд окончен!", text: """
                                              Ваш результат: \(correctAnswers)/\(self.questionsAmount)
                                              Количество сыграный квизов: \(statisticService.gamesCount)
                                              Рекорд: \(statisticService.bestGame.correct)/\(statisticService.bestGame.total) (\(statisticService.bestGame.date.dateTimeString))
                                              Средняя точность: \(String(format: "%.2f", statisticService.totalAccuracy))%
                                              """, buttonText: "Сыграть ещё раз")
            viewController.showResults(quiz: result)
...
